--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,5 +1,5 @@
 
-name: 部署文档
+name: vuepress部署文档
 
 on:
   push:
@@ -26,6 +26,17 @@ jobs:
           node-version: 18
           cache: yarn
 
+      # 缓存 node_modules
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: 安装依赖
         run: yarn install --frozen-lockfile
 
@@ -39,6 +50,7 @@ jobs:
       - name: 部署文档
         uses: JamesIves/github-pages-deploy-action@v4
         with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           # 这是文档部署到的分支名称
           branch: gh-pages
           folder: src/.vuepress/dist
