--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "vue": "^3.2.47",
     "vuepress": "2.0.0-beta.61",
     "vuepress-theme-hope": "2.0.0-beta.193"
+  },
+  "dependencies": {
+    "vuepress-plugin-live2d": "^0.0.7"
   }
 }
